test_fm/_test11.nj
//
// class declaration
// invalid superclass
//

public class Main extends Object {

  public static void main() {
  }

}

class Baby extends Parent {

}
